--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="information">Knowledge</div>
             <div class="first-knowledge">
             <div class="text"><p class="first">Frontend</p>
-              <p class="second">Languages: Css, HTML, Javascript</p></div>
+              <p class="second"> Css, HTML, Javascript</p></div>
                 <div class="image"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="svg">
             <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75L22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3l-4.5 16.5" />
           </svg>
